--- a/lavaset/run_lavaset.ipynb
+++ b/lavaset/run_lavaset.ipynb
@@ -727,7 +727,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310-lavaset",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -741,10 +741,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+   "version": "3.10.8"
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
