--- a/examples/run_lavaset.ipynb
+++ b/examples/run_lavaset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,222 +91,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 16 concurrent workers.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 3\n",
-      "building tree 0\n",
-      "building tree 2\n",
-      "building tree 9\n",
-      "building tree 4\n",
-      "building tree 5\n",
-      "building tree 11\n",
-      "building tree 6\n",
-      "building tree 7\n",
-      "building tree 13\n",
-      "building tree 8\n",
-      "building tree 12\n",
-      "building tree 1\n",
-      "building tree 10\n",
-      "building tree 14\n",
-      "building tree 15\n",
-      "building tree 16\n",
-      "building tree 17\n",
-      "building tree 18\n",
-      "building tree 19\n",
-      "building tree 20\n",
-      "building tree 21\n",
-      "building tree 22\n",
-      "building tree 23\n",
-      "building tree 24\n",
-      "building tree 25\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    5.6s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 26\n",
-      "building tree 27\n",
-      "building tree 28\n",
-      "building tree 29\n",
-      "building tree 30\n",
-      "building tree 31\n",
-      "building tree 32\n",
-      "building tree 33\n",
-      "building tree 34\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done  18 tasks      | elapsed:    8.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 35\n",
-      "building tree 36\n",
-      "building tree 37\n",
-      "building tree 38\n",
-      "building tree 39\n",
-      "building tree 40\n",
-      "building tree 41\n",
-      "building tree 42\n",
-      "building tree 43\n",
-      "building tree 44\n",
-      "building tree 45\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done  29 tasks      | elapsed:    9.3s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 46\n",
-      "building tree 47\n",
-      "building tree 48\n",
-      "building tree 49\n",
-      "building tree 50\n",
-      "building tree 51\n",
-      "building tree 52\n",
-      "building tree 53\n",
-      "building tree 54\n",
-      "building tree 55\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done  40 tasks      | elapsed:   11.9s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 56\n",
-      "building tree 57\n",
-      "building tree 58\n",
-      "building tree 59\n",
-      "building tree 60\n",
-      "building tree 61\n",
-      "building tree 62\n",
-      "building tree 63\n",
-      "building tree 64\n",
-      "building tree 65\n",
-      "building tree 66\n",
-      "building tree 67\n",
-      "building tree 68\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done  53 tasks      | elapsed:   14.3s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 69\n",
-      "building tree 70\n",
-      "building tree 71\n",
-      "building tree 72\n",
-      "building tree 73\n",
-      "building tree 74\n",
-      "building tree 75\n",
-      "building tree 76\n",
-      "building tree 77\n",
-      "building tree 78\n",
-      "building tree 79\n",
-      "building tree 80\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done  66 tasks      | elapsed:   16.9s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 81\n",
-      "building tree 82\n",
-      "building tree 83\n",
-      "building tree 84\n",
-      "building tree 85\n",
-      "building tree 86\n",
-      "building tree 87\n",
-      "building tree 88\n",
-      "building tree 89\n",
-      "building tree 90\n",
-      "building tree 91\n",
-      "building tree 92\n",
-      "building tree 93\n",
-      "building tree 94\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done  80 out of 100 | elapsed:   19.7s remaining:    4.9s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building tree 95\n",
-      "building tree 96\n",
-      "building tree 97\n",
-      "building tree 98\n",
-      "building tree 99\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Done  91 out of 100 | elapsed:   21.3s remaining:    2.1s\n",
-      "[Parallel(n_jobs=-1)]: Done 100 out of 100 | elapsed:   22.4s finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lavaset = model.fit_lavaset(X_train, y_train, knn, random_state=5)"
    ]
@@ -320,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,14 +123,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "accuracy = accuracy_score(y_test, np.array(y_preds, dtype=int))\n",
     "precision = precision_score(y_test, np.array(y_preds, dtype=int))\n",
     "recall = recall_score(y_test, np.array(y_preds, dtype=int))\n",
-    "f1 = f1_score(y_test, np.array(y_preds, dtype=int))"
+    "f1 = f1_score(y_test, np.array(y_preds, dtype=int))\n",
+    "\n",
+    "print('accuracy:', accuracy, 'precision:', precision, 'recall:', recall, 'f1-score:', f1)"
    ]
   },
   {
@@ -355,19 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "feature_importance_df = pd.DataFrame(model.feature_evaluation(X_train, lavaset), columns=['Times Considered', 'Times Selected', 'Gini'])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "feature_importance_df = pd.DataFrame(model.feature_evaluation(X_train, lavaset), columns=['Times Considered', 'Times Selected', 'Gini'])\n",
+    "feature_importance_df"
+   ]
   }
  ],
  "metadata": {
