--- a/examples/run_lavaboost.ipynb
+++ b/examples/run_lavaboost.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lavaset.lavaset import LAVASET\n",
+    "from lavaset.lavaboost import LAVABOOST\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.spatial import distance_matrix\n",
@@ -54,7 +54,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LAVASET(ntrees=100, n_neigh=10, distance=False, nvartosample='sqrt', nsamtosample=0.5, oobe=True) \n",
+    "model = LAVABOOST(ntrees=1,n_neigh=0, distance=2, nvartosample='sqrt', \n",
+    "                    oobe=True, method='g', n_estimators=50, learning_rate=0.1,\n",
+    "                    n_classes=2, nsamtosample=None)\n",
     "knn = model.knn_calculation(mtbls1.columns[1:], data_type='1D')"
    ]
   },
@@ -67,6 +69,7 @@
     "- distance: parameter indicating whether the input for neighbor calculation is a distance matrix, default is False; if True, then n_neigh should be 0 (boolean)\n",
     "- nvartosample: the number of features picked for each split, 'sqrt' indicates the squared root of total number of features, if int then takes that specific number of features (string or int)\n",
     "- nsamtosample: the number of sample to consider for each tree, if float (like 0.5) then it considers `float * total number of samples`, if int then takes that specific number of samples (float or int)\n",
+    "- n_estimators: number of estimators\n",
     "- oobe: parameter for calcualting the out-of-bag score, default=True (boolean)\n",
     "\n",
     "If the input to the `knn_calculation` function is a distance matrix then:\n",
@@ -139,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, to get the feature importance calculations from LAVASET you can call the `feature_evaluation` function by setting the data for which the models has been trained on, here `X_train` and the fitted model, here `lavaset` as defined above. The output is a numpy array consisting of 3 vectors, the first shows the number of times the feature (in the specific index) is considered for a split, the second vector shows the number of times selected for a split, and finally the third vector is the gini value. "
+    "Finally, to get the feature importance calculations from LAVABOOST you can call the `class_feature_distribution_evaluation` function by setting the data for which the models has been trained on, here `X_train` and the fitted model, here `lavaset` as defined above. The output is a numpy array consisting of 3 vectors, the first shows the number of times the feature (in the specific index) is considered for a split, the second vector shows the number of times selected for a split, and finally the third vector is the gini value. "
    ]
   },
   {
@@ -148,8 +151,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "feature_importance_df = pd.DataFrame(model.feature_evaluation(X_train, lavaset), columns=['Times Considered', 'Times Selected', 'Gini'])\n",
-    "feature_importance_df"
+    "classes_features_importances = model.class_feature_distribution_evaluation(X_train, lavaset, n_classes)\n",
+    "classes_features_importances = pd.DataFrame(classes_features_importances)\n",
+    "classes_features_importances = model.create_v_value_df(classes_features_importances)"
    ]
   }
  ],
