prepare for deploy

--- a/examples/run_lavaset.ipynb
+++ b/examples/run_lavaset.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "from lavaset.lavaset import LAVASET\n",
+    "from lavaset.lavaset_clifi import LAVASET_CLIFI\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from scipy.spatial import distance_matrix\n",
@@ -43,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run LAVASET\n",
+    "### Run LAVASET or LAVASET_CLIFI\n",
     "\n",
     "Here we are calling the LAVASET model and the `knn_calculation` function from the model that calculates the nearest neighbors, either based on a number of neighbors set by the user or a distance matrix. "
    ]
@@ -54,7 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "model = LAVASET(ntrees=100, n_neigh=10, distance=False, nvartosample='sqrt', nsamtosample=0.5, oobe=True) \n",
+    "model_clifi = LAVASET_CLIFI(ntrees=100, n_neigh=10, distance=False, nvartosample='sqrt', nsamtosample=0.5, oobe=True)\n",
     "knn = model.knn_calculation(mtbls1.columns[1:], data_type='1D')"
    ]
   },
@@ -95,7 +98,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lavaset = model.fit_lavaset(X_train, y_train, knn, random_state=5)"
+    "lavaset = model.fit_lavaset(X_train, y_train, knn, random_state=5)\n",
+    "lavaset_clifi = model_clifi.fit_lavaset(X_train, y_train, knn, random_state=5)"
    ]
   },
   {
@@ -111,14 +115,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_preds, votes, oobe = model.predict_lavaset(X_test, lavaset)"
+    "y_preds, votes, oobe = model.predict_lavaset(X_test, lavaset)\n",
+    "y_preds_clifi, votes_clifi, oobe_clifi = model_clifi.predict_lavaset(X_test, lavaset_clifi)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below is an example of different metrics that can be called via the `sklearn` package for testing the performance of LAVASET."
+    "Below is an example of different metrics that can be called via the `sklearn` package for testing the performance of LAVASET. The same metrics can be used for LAVASET_CLIFI. "
    ]
   },
   {
@@ -151,6 +156,25 @@
     "feature_importance_df = pd.DataFrame(model.feature_evaluation(X_train, lavaset), columns=['Times Considered', 'Times Selected', 'Gini'])\n",
     "feature_importance_df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To get the feature importance calculations from LAVASET_CLIFI you can call the `class_feature_evaluation` function by setting the data for which the models has been trained on, here `X_train` and the fitted model, here `lavaset_clifi` as defined above. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_importances = model.class_feature_evaluation(X_train, lavaset_clifi, n_classes)\n",
+    "\n",
+    "features_importances = model.class_feature_distribution_evaluation(X_train, lavaset_clifi, n_classes)\n",
+    "features_importances = pd.DataFrame(features_importances)\n"
+   ]
   }
  ],
  "metadata": {
@@ -169,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
